--- a/summary_2024.Rmd
+++ b/summary_2024.Rmd
@@ -354,6 +354,10 @@ Data cleaning consisted of:
   Further insights are available in the <a href="scratch_pad_2024.html">exploratory data analysis</a>.
 </span>
 
+<div class="button">
+  <a href="scratch_pad_2024.html">Exploratory Data Analysis 2024</a>
+</div>
+
 \
 
 ## Supporting Visualizations
