feat: add floating header

--- a/scratch_pad_2019.Rmd
+++ b/scratch_pad_2019.Rmd
@@ -13,6 +13,10 @@ output:
     css: ./resources/css/styles.css
 ---
 
+<div class="floating-header">
+  2019 Exploratory Data Analysis
+</div>
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
