--- a/summary_2024.Rmd
+++ b/summary_2024.Rmd
@@ -14,6 +14,10 @@ output:
     css: ./resources/css/styles.css
 ---
 
+<div class="floating-header">
+  Cyclistic 2024 Final Report
+</div>
+
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 # bounds of leaflet map fixable for mobile? put it in a box
 # save plot(s)
