--- a/scratch_pad_2019.Rmd
+++ b/scratch_pad_2019.Rmd
@@ -21,6 +21,9 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(fontawesome)
+library(sf)
+library(ggspatial)
+library(leaflet)
 ```
 
 ## Scratch Pad for 2019 Cyclistic Exploratory Data Analysis
@@ -32,29 +35,13 @@ library(fontawesome)
 Exploratory Data Analysis, unencumbered by the need to be **too** presentable. 
 
 ```{r}
-# Load the data, combine into a df
+# load data, combine into df
 q1_2019 <- read.csv("./resources/data/q1_2019_cleaned.csv")
 q2_2019 <- read.csv("./resources/data/q2_2019_cleaned.csv")
 q3_2019 <- read.csv("./resources/data/q3_2019_cleaned.csv")
 q4_2019 <- read.csv("./resources/data/q4_2019_cleaned.csv")
 stations <- read.csv("./resources/data/stations.csv")
-# q1_2020 <- read.csv("./resources/data/q1_2020_cleaned.csv")
 
-# 2020 data contains chars in ride_id and rideable_type
-# convert_columns_to_character <- function(df) {
-#   df <- mutate(df,
-#                ride_id = as.character(ride_id),
-#                rideable_type = as.character(rideable_type))
-#   return(df)
-# }
-
-# Apply the function to each quarter's data frame
-# q1_2019 <- convert_columns_to_character(q1_2019)
-# q2_2019 <- convert_columns_to_character(q2_2019)
-# q3_2019 <- convert_columns_to_character(q3_2019)
-# q4_2019 <- convert_columns_to_character(q4_2019)
-
-# df <- bind_rows(q1_2019, q2_2019, q3_2019, q4_2019, q1_2020)
 df <- bind_rows(q1_2019, q2_2019, q3_2019, q4_2019)
 ```
 
@@ -379,15 +366,14 @@ Peak time is Saturday afternoon, followed by Sunday afternoon. Unsurprising.
 <span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Top](#)</span>
 
 ```{r}
-library(sf)
-library(ggspatial)
+# map all stations
 
 # convert the stations_2020 data frame to an sf object
 stations_sf <- stations %>%
   drop_na() %>%
   st_as_sf(coords = c("longitude", "latitude"), crs = 4326)
 
-# plot the map with the station locations
+# plot map with all station locations
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = stations_sf, color = "red", size = 2) +
@@ -446,6 +432,9 @@ top_stations <- df %>%
 print(top_stations)
 ```
 
+\
+
+<div class="map-container">
 ```{r}
 # Leaflet: popular start stations with cleaned data
 library(leaflet)
@@ -463,10 +452,13 @@ leaflet(data = cleaned_data) %>%
   addTiles() %>%
   addMarkers(lng = ~start_lng, lat = ~start_lat, clusterOptions = markerClusterOptions())
 ```
+</div>
 
+\
+
+<div class="map-container">
 ```{r}
 # Leaflet: popular end stations with cleaned data
-library(leaflet)
 
 # remove rows with missing latitude or longitude values
 cleaned_data <- df %>%
@@ -481,11 +473,11 @@ leaflet(data = cleaned_data) %>%
   addTiles() %>%
   addMarkers(lng = ~end_lng, lat = ~end_lat, clusterOptions = markerClusterOptions())
 ```
+</div>
+
+\
 
 ```{r}
-library(sf)
-library(ggspatial)
-
 # sample data
 set.seed(123) # for reproducibility
 cleaned_data <- df %>% sample_n(1000)
@@ -509,6 +501,8 @@ ggplot() +
   theme_minimal()
 ```
 
+Bar chart and maps of top casual stations
+
 ```{r}
 # aggregate casual rider counts by station
 casual_peak_stations <- df %>%
@@ -526,8 +520,6 @@ ggplot(casual_peak_stations, aes(x = reorder(start_station_name, n), y = n, fill
 
 ```{r}
 # map of top start stations for casual riders
-library(sf)
-library(ggspatial)
 
 # convert top casual start stations to sf object
 casual_start_sf <- casual_peak_stations %>%
@@ -536,7 +528,7 @@ casual_start_sf <- casual_peak_stations %>%
   drop_na(start_lat, start_lng) %>%
   st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
 
-# plot the map
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = casual_start_sf, color = "blue", size = 3, alpha = 0.7) +
@@ -555,7 +547,7 @@ casual_end_from_start_sf <- df %>%
   drop_na(end_lat, end_lng) %>%
   st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
 
-# map end stations
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = casual_end_from_start_sf, color = "blue", size = 3, alpha = 0.7) +
@@ -583,14 +575,14 @@ ggplot(casual_peak_stations, aes(x = reorder(end_station_name, n), y = n, fill =
 ```
 
 ```{r}
-# Convert top casual end stations to sf object
+# convert top casual end stations to sf object
 casual_end_sf <- casual_peak_stations %>%
   left_join(df, by = c("end_station_name")) %>%
   distinct(end_station_name, end_lat, end_lng) %>%
   drop_na(end_lat, end_lng) %>%
   st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
 
-# Plot map
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = casual_end_sf, color = "blue", size = 3, alpha = 0.7) +
@@ -609,7 +601,7 @@ casual_start_from_end_sf <- df %>%
   drop_na(start_lat, start_lng) %>%
   st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
 
-# map: start stations
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = casual_start_from_end_sf, color = "blue", size = 3, alpha = 0.7) +
@@ -620,6 +612,7 @@ ggplot() +
   theme_minimal()
 ```
 
+Bar chart and maps of top member stations
 
 ```{r}
 # aggregate member rider counts by station
@@ -690,14 +683,14 @@ ggplot(member_peak_stations, aes(x = reorder(end_station_name, n), y = n, fill =
 ```
 
 ```{r}
-# Convert top member end stations to sf object
+# convert top member end stations to sf object
 member_end_sf <- member_peak_stations %>%
   left_join(df, by = c("end_station_name")) %>%
   distinct(end_station_name, end_lat, end_lng) %>%
   drop_na(end_lat, end_lng) %>%
   st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
 
-# Plot map
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = member_end_sf, color = "red", size = 3, alpha = 0.7) +
@@ -709,14 +702,14 @@ ggplot() +
 ```
 
 ```{r}
-# Extract start stations for trips ending at top member end stations
+# extract start stations for trips ending at top member end stations
 member_start_sf <- df %>%
   filter(end_station_name %in% member_peak_stations$end_station_name) %>%
   distinct(end_station_name, start_station_name, start_lat, start_lng) %>%
   drop_na(start_lat, start_lng) %>%
   st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
 
-# Plot map
+# plot map
 ggplot() +
   annotation_map_tile(type = "osm", zoom = 12) +
   geom_sf(data = member_start_sf, color = "blue", size = 3, alpha = 0.7) +
