--- a/summary_2019.Rmd
+++ b/summary_2019.Rmd
@@ -108,7 +108,8 @@ df %>%
     title = "Rides per Hour of Day by Customer Type and Day of Week",
     subtitle = "Casual riders peak on weekend afternoons; members peak during rush hours.",
     x = "Hour of Day", y = "Number of Rides"
-  )
+  ) +
+  theme(axis.text.x = element_text(angle = 45))
 ```
 
 ---
@@ -414,7 +415,8 @@ df %>%
     title = "Rides per Hour of Day by Customer Type and Day of Week",
     subtitle = "Free y-axis highlights weekend differences",
     x = "Hour of Day", y = "Number of Rides"
-  )
+  ) +
+  theme(axis.text.x = element_text(angle = 45))
 ```
 
 ---
